--- a/.gitignore
+++ b/.gitignore
@@ -47,12 +47,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-build/web/WEB-INF/glassfish-web.xml
+build/
+src/java/analysedesentiments/
 
-build/web/WEB-INF/classes/analysedesentiments/AnalyseDeSentiments.class
 
-build/web/WEB-INF/classes/analysedesentiments/CalculAttributs.class
-
-src/java/analysedesentiments/AnalyseDeSentiments.java
-
-src/java/analysedesentiments/CalculAttributs.java
