--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ build/
 src/java/analysedesentiments/
 
 
+build/web/WEB-INF/classes/fr/lirmm/beans/User.class
+build/web/WEB-INF/classes/fr/lirmm/db/Names.class
