--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 nbproject
-
+build
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -47,7 +47,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-build/
+
 src/java/analysedesentiments/
 
 
