--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -71,6 +71,9 @@
         <servlet-name>Manage</servlet-name>
         <url-pattern>/manage</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>WEB-INF/index.jsp</welcome-file>
+    </welcome-file-list>
     <resource-ref>
         <res-ref-name>jdbc/workflow_db</res-ref-name>
         <res-type>javax.sql.ConnectionPoolDataSource</res-type>
