--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -29,6 +29,16 @@
         <servlet-name>Manage</servlet-name>
         <servlet-class>fr.lirmm.servlets.Manage</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>TrainData</servlet-name>
+        <servlet-class>fr.lirmm.servlets.TrainData</servlet-class>
+        <multipart-config>
+        </multipart-config>
+    </servlet>
+    <servlet>
+        <servlet-name>TrainDataAdvenced</servlet-name>
+        <servlet-class>fr.lirmm.servlets.TrainDataAdvenced</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>index</servlet-name>
         <url-pattern>/index</url-pattern>
@@ -70,6 +80,14 @@
     <servlet-mapping>
         <servlet-name>Manage</servlet-name>
         <url-pattern>/manage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TrainData</servlet-name>
+        <url-pattern>/train-data</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TrainDataAdvenced</servlet-name>
+        <url-pattern>/train-data-advenced</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>WEB-INF/index.jsp</welcome-file>
