--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,20 @@
             <artifactId>org.annolab.tt4j</artifactId>
             <version>1.1.2</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>nz.ac.waikato.cms.weka</groupId>
             <artifactId>weka-stable</artifactId>
             <version>3.6.13</version>
+        </dependency-->
+        <dependency>
+            <groupId>nz.ac.waikato.cms.weka</groupId>
+            <artifactId>weka-dev</artifactId>
+            <version>3.7.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1207.jre7</version>
         </dependency>
     </dependencies>
 
