les ressources XML sont ajoutés direct dans le war afin d'être utilisé à partir de là

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <targetPath>.</targetPath>
+                <filtering>false</filtering>
+                <directory>${basedir}/resources</directory>
+                <includes>
+                    <include>*.xml</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
