--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>3.7.10</version>
         </dependency>
         <dependency>
+	<groupId>jdom</groupId>
+	<artifactId>jdom</artifactId>
+	<version>1.0</version>
+</dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4.1207.jre7</version>
